[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_tag"
description = "Module for fastapi help to ensure the Metadata of the API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Yasser Tahiri", email = "hello@yezz.me" },
]
keywords = [
    "FastAPI",
    "Pydantic",
    "Metadata",
    "OpenAPI",
    "RESTful",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Typing :: Typed",
]

dependencies = [
    "fastapi >=0.100.0,<0.112.0",
    "pydantic >=2.8.2,<2.8.3",
    "pydantic-settings >=2.1.0",
]

dynamic = ["version"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/yezz123/fastapi-tag"
Funding = 'https://github.com/sponsors/yezz123'

[project.optional-dependencies]
lint = [
    "pre-commit==3.7.1",
    "mypy==1.10.1",
    "ruff==0.5.1",
]
test = [
    "pytest==8.2.2",
    "pytest-asyncio == 0.23.7",
    "pytest-cov==5.0.0",
    "python-decouple",
    "pytest-pretty==1.2.0",
    "httpx==0.27.0",
]

[tool.hatch.version]
path = "fastapi_tag/__init__.py"


[tool.ruff.lint]
mccabe = { max-complexity = 14 }
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["pydantic"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["fastapi_tag"]
branch = true
context = '${CONTEXT}'

[tool.coverage.paths]
source = [
    'fastapi_tag/',
    '/Users/runner/work/fastapi_tag/fastapi_tag/fastapi_tag/',
    'D:\a\fastapi_tag\fastapi_tag\fastapi_tag',
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]

[tool.mypy]
strict = true
no_implicit_optional= true
plugins = 'pydantic.mypy'


[tool.pytest.ini_options]
testpaths = 'tests'
log_cli = "1"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format= "%Y-%m-%d %H:%M:%S"
asyncio_mode= "auto"
filterwarnings = [
    'error',
    'ignore::DeprecationWarning',
]
